Add download functionality and update configuration for document ingestion
- Implemented a new download module to clone documentation from a specified Git repository.
- Updated configuration to include Git repository URL and local directory for downloaded docs.
- Modified ingestion process to read from the newly downloaded documents and Wikipedia.
- Refactored code for clarity and improved logging throughout the ingestion process.

--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,13 @@ logging:
   level: "INFO"
   format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
   date_format: "%Y-%m-%d %H:%M:%S"
+docs:
+  git_repository: "https://github.com/langchain-ai/langchain-api-docs-html.git"
+  local_directory: "../../data/langchain-api-docs"
 vector_store:
   index_name: "langchain-doc-index"
   embedding_model: "text-embedding-3-small"
   ingestion:
-    path_to_documents: "C:\\Workspace\\GitHub-Projects\\LangChainDocumentationHelper\\data\\langchain-docs\\api.python.langchain.com\\en\\latest"
     chunk_size: 600
     chunk_overlap: 50
 llm:
