--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,6 @@ dataclasses-json==0.6.7
 distro==1.9.0
 frozenlist==1.5.0
 gitdb==4.0.12
-GitPython==3.1.44
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
@@ -89,10 +88,10 @@ tenacity==9.0.0
 tiktoken==0.8.0
 toml==0.10.2
 tornado==6.4.2
-tqdm==4.67.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 watchdog==6.0.0
+wikipedia==1.4.0
 yarl==1.18.3
