--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 logging:
-  level: "INFO"
+  level: "DEBUG"
   format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
   date_format: "%Y-%m-%d %H:%M:%S"
 docs:
